--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,17 @@ jobs:
           # if your docs needs submodules, uncomment the following line
           # submodules: true
 
+    
+    
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+      
+      - name: Install corepack
+        run: npm install -g corepack@0.10.0 # Specify the version
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -28,14 +39,7 @@ jobs:
           run_install: true
           package_json_file: package.json
           standalone: false
-
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: pnpm
-
+            
       - name: Install Deps
         run: |
           corepack enable
